WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194265
vp8e_mr_alloc_mem() leaks LOWER_RES_FRAME_INFO if second memory allocation fails
https://bugs.webkit.org/show_bug.cgi?id=194265
Summary
vp8e_mr_alloc_mem() leaks LOWER_RES_FRAME_INFO if second memory allocation fails
David Kilzer (:ddkilzer)
Reported
2019-02-04 18:16:27 PST
vp8e_mr_alloc_mem() leaks LOWER_RES_FRAME_INFO if second memory allocation fails via clang static analyzer: Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp8/vp8_cx_iface.c:589:5: warning: Value stored to 'res' is never read res = VPX_CODEC_MEM_ERROR; ^ ~~~~~~~~~~~~~~~~~~~ Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp8/vp8_cx_iface.c:592:27: warning: Access to field 'mb_info' results in a dereference of a null pointer (loaded from variable 'shared_mem_loc') shared_mem_loc->mb_info = ~~~~~~~~~~~~~~ ^ Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp8/vp8_cx_iface.c:595:11: warning: Potential leak of memory pointed to by 'shared_mem_loc' res = VPX_CODEC_MEM_ERROR; ^~~~~~~~~~~~~~~~~~~ 3 warnings generated.
Attachments
Patch v1
(4.12 KB, patch)
2019-02-04 18:25 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2019-02-04 18:25:25 PST
Created
attachment 361148
[details]
Patch v1
Radar WebKit Bug Importer
Comment 2
2019-02-04 18:41:27 PST
<
rdar://problem/47808154
>
WebKit Commit Bot
Comment 3
2019-02-04 19:25:00 PST
Comment on
attachment 361148
[details]
Patch v1 Clearing flags on attachment: 361148 Committed
r240961
: <
https://trac.webkit.org/changeset/240961
>
WebKit Commit Bot
Comment 4
2019-02-04 19:25:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug